memos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      volumes:
      - name: memos-storage
        persistentVolumeClaim:
          claimName: memos-pvc
      containers:
      - name: memos
        image: neosmemo/memos:0.22.5
        ports:
        - containerPort: 5230
        volumeMounts:
        - name: memos-storage
          mountPath: /var/opt/memos
---
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: homelab
spec:
  type: NodePort
  selector:
    app: memos
  ports:
    - port: 5230
      targetPort: 5230
      nodePort: 30001
