whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
      containers:
      - name: whoami
        image: crccheck/hello-world:latest
        ports:
        - containerPort: 5231
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: homelab
spec:
  type: NodePort
  selector:
    app: whoami
  ports:
    - port: 5231
      targetPort: 5231
      nodePort: 30002
